# Swipe-Visual-Coding

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  perf.data  run.sh  tags
.cache/clangd/index/: Block.hpp.F8740A7A4C76A648.idx  Button.hpp.17A604E02FC43B10.idx  Collider.hpp.2E9C25F5B0B5730B.idx  Compiler.hpp.92C7C0E7B6119347.idx  DividedEntity.hpp.BCB52EF20C41BB25.idx  Entity.hpp.8DFD8AA5C7A621B0.idx  FuncHead.hpp.142593DF21FB1931.idx  Gap.hpp.941D578475406E76.idx  General.hpp.DEBABC49FCDC7F1F.idx  HeightChanger.hpp.DD9FAC36D67F09C4.idx  LinkedList.hpp.E2335DA7D7409735.idx  Loop.hpp.BFD44C44F6E23BF9.idx  Math.hpp.430E61EDF420FEE2.idx  RenderWindow.hpp.1E18E45B75287E7A.idx  Resizable.hpp.69AF5ED9E54EB5FD.idx  TextBox.hpp.DB19CF9DDF74BA5C.idx  Utils.hpp.8ED2472E2B5BF152.idx  Variable.hpp.3502ED5980D00958.idx  block.cpp.27D7DB382B7A0FAC.idx  collider.cpp.08D800B599B44429.idx  compiler.cpp.C078F195316D8F1E.idx  dividedentity.cpp.B1342F33D3AB21F1.idx  entity.cpp.AA94B9F57A202D1F.idx  funchead.cpp.7AF36FB989A0729E.idx  gap.cpp.213C515FA1B51562.idx  general.cpp.6D4077C20CF69216.idx  heightchanger.cpp.95539CF30732309A.idx  loop.cpp.91A6614EE9761C35.idx  main.cpp.D966558A7964FE9E.idx  math.cpp.A75066A64692C7EF.idx  renderwindow.cpp.F17460306E0CA7C9.idx  (+4 more)
Swipe Installers/: SwipeInstallerArch.sh  SwipeInstallerDebian.sh
include/: Block.hpp  Button.hpp  Collider.hpp  Compiler.hpp  DividedEntity.hpp  Entity.hpp  FuncHead.hpp  Gap.hpp  General.hpp  HeightChanger.hpp  LinkedList.hpp  Loop.hpp  Math.hpp  RandomDeletionStack.hpp  RenderWindow.hpp  Resizable.hpp  TextArea.hpp  TextBox.hpp  Utils.hpp  Variable.hpp
lib/: README.md  libSDL2-2.0.so.0  libSDL2-2.0.so.0.3200.56  libSDL2_mixer-2.0.so.0.800.1  libSDL3.so.0.2.20  libharfbuzz.so.0
src/: .main.cpp.swp  block.cpp  collider.cpp  compiler.cpp  dividedentity.cpp  entity.cpp  funchead.cpp  gap.cpp  general.cpp  heightchanger.cpp  loop.cpp  main.cpp  math.cpp  renderwindow.cpp  resizable.cpp  textarea.cpp  textbox.cpp  utils.cpp  variable.cpp
